--- a/app/styles/wallpaper.css
+++ b/app/styles/wallpaper.css
@@ -1,27 +1,24 @@
 .wallpaper-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: space-between;
   width: 100%;
-  min-height: calc(100vh - 60px); /* Adjust based on your navbar height */
-  padding: 24px;
-  box-sizing: border-box;
+  max-width: 2000px;
   margin: 0 auto;
+  padding: 20px;
 }
 
 .wallpaper-grid {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
-  justify-content: center;
-  align-items: flex-start;
+  display: grid;
+  gap: 20px;
   width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: fit-content;
+  padding: 20px;
 }
 
 .wallpaper-grid > * {
   width: 100%;
-  max-width: 450px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
 }
 
 .wallpaper-item {
@@ -178,6 +175,31 @@
 .no-images-message {
   background-color: #e2e3e5;
   color: #383d41;
+}
+
+/* As screen gets smaller, reduce number of columns */
+@media screen and (max-width: 1600px) {
+  .wallpaper-grid {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .wallpaper-grid {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .wallpaper-grid {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .wallpaper-grid {
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  }
 }
 
 @media screen and (max-width: 768px) {
