--- a/app/styles/wallpaperCard.css
+++ b/app/styles/wallpaperCard.css
@@ -14,8 +14,8 @@
 
 .firebase-wallpaper-image {
   width: 100%;
-  height: auto;
-  object-fit: contain;
+  height: 100%;
+  object-fit: cover;
   transition: transform 0.3s ease;
 }
 
